<resources>
    <string name="app_name">Xapo-test</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="oops_error_occurred">Sorry we are not able to process your request now, please try again.</string>
    <string name="a_moment_please">A moment please …</string>
    <string name="treanding_android_repos">Trending Android Repos</string>
    <string name="error_no_internet">No Internet connection available</string>
    <string name="no_internet">No Internet</string>
    <string name="repo_image">Repo Image</string>
    <string name="full_name">Full name</string>
    <string name="owner">Owner</string>
    <string name="language">Language</string>
    <string name="stats">Stats</string>
    <string name="license">License</string>
    <string name="top_d_contributors">Top %d contributors</string>
    <string name="top_contributor">Top contributor</string>
    <string name="repo_name_and_owner">%s by %s</string>
    <string name="repo_score">Score: %f</string>
    <string name="repo_issues">%d issues</string>
    <string name="repo_watchers">%d watchers</string>
    <string name="repo_forks">%d forks</string>
    <string name="repo_contributors">Repo Contributors</string>
</resources>
