<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/repo_details"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/repo_detail_activity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:background="@android:color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large"
            android:paddingBottom="@dimen/spacing_large">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:text="@string/full_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_80" />

            <TextView
                android:id="@+id/repo_full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="@dimen/spacing_mxlarge"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_40"
                tools:text="Repo full name" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_large" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:background="@android:color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large"
            android:paddingBottom="@dimen/spacing_large">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:text="@string/stats"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_80" />


            <TextView
                android:id="@+id/forks_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="@dimen/spacing_xlarge"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_40"
                tools:text="@string/repo_forks" />

            <View
                android:layout_width="10dp"
                android:layout_height="1dp"
                android:background="@color/grey_20" />

            <TextView
                android:id="@+id/watchers_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="@dimen/spacing_xlarge"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_40"
                tools:text="@string/repo_watchers" />

            <View
                android:layout_width="10dp"
                android:layout_height="1dp"
                android:background="@color/grey_20" />

            <TextView
                android:id="@+id/issues_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="@dimen/spacing_xlarge"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_40"
                tools:text="@string/repo_issues" />

            <View
                android:layout_width="10dp"
                android:layout_height="1dp"
                android:background="@color/grey_20" />

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="@dimen/spacing_xlarge"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/colorAccent"
                tools:text="@string/repo_score" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_large" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:id="@+id/repo_contributors_view"
        android:background="@android:color/white"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large"
            android:paddingBottom="@dimen/spacing_large">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="center_vertical"
                    android:id="@+id/contributors_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:textColor="@color/grey_80"
                    android:text="@string/repo_contributors"
                    tools:text="Top 3 contributors" />


                <ProgressBar
                    android:id="@+id/contributors_loader"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:indeterminate="true" />


            </RelativeLayout>



            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/contributors"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_large" />


    <androidx.cardview.widget.CardView
        android:id="@+id/license_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_large"
        android:layout_marginRight="@dimen/spacing_large"
        android:background="@android:color/white"
        android:visibility="gone"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/spacing_large"
            android:paddingRight="@dimen/spacing_large"
            android:paddingBottom="@dimen/spacing_large">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:text="@string/license"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@color/grey_80" />

            <TextView
                android:id="@+id/license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="@dimen/spacing_mxlarge"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/grey_40"
                tools:text="License" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>